gedcom/tests/snapshots/tests__golden_files@no_tag.ged.snap
---
source: gedcom/tests/tests.rs
expression: "format!(\"{:?}\",\n    err.with_source_code(NamedSource::new(filename.to_string_lossy(), data)))"
input_file: gedcom/tests/syntax_inputs/no_tag.ged
---
gedcom::parse_error::no_tag

  × No tag found
   ╭─[no_tag.ged:1:1]
 1 │ 0
   · ┬
   · ╰── no tag in this line
   ╰────
